<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_age"
            android:icon="@drawable/ic_menu_age"
            android:title="@string/menu_age" />
        <item
            android:id="@+id/nav_gender"
            android:icon="@drawable/ic_menu_gender"
            android:title="@string/menu_gender" />
        <item
            android:id="@+id/nav_region"
            android:icon="@drawable/ic_menu_region"
            android:title="@string/menu_region" />
    </group>

    <item android:title="设置">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting_profile"
                    android:title="@string/menu_setting_profile" />
                <item
                    android:id="@+id/nav_choose_server"
                    android:title="@string/menu_choose_server" />
                <item
                    android:id="@+id/nav_choose_sensor"
                    android:title="@string/menu_choose_sensor"/>
            </group>
        </menu>
    </item>

</menu>
